@@ -1,6 +1,7 @@
 
 1.1.0 release
 
+	* allow specifying which tracker to scrape in scrape_tracker
 	* tracker response alerts from user initiated announces/scrapes are now
 	  posted regardless of alert mask
 	* improve DHT performance when changing external IP (primarily affects
